--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1 id="main"></h1>
-  <script src="dist/index.js"></script> <!-- Link to the compiled TypeScript file -->
+  <script type="module" src="dist/index.js"></script> 
 </body>
 </html>
